<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/app_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/white"

        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/Select_Frequency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView

        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_55sdp"
        android:textColor="@color/white"
        android:background="@drawable/boxshape"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:id="@+id/dailyTXT"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:text="@string/daily"/>
    <TextView

        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_55sdp"
        android:textColor="@color/white"
        android:background="@drawable/boxshape"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:id="@+id/monfriTXT"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyTXT"
        android:text="@string/Monfriday"/>
    <TextView

        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_55sdp"
        android:textColor="@color/white"
        android:background="@drawable/boxshape"
        android:gravity="center"
        android:textSize="@dimen/_18sdp"
        android:id="@+id/satsunTXT"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monfriTXT"
        android:text="@string/satsun"/>

    <include
        layout="@layout/app_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>